# RustBackendTemple

./: .gitignore  Cargo.toml  Dockerfile.app  Dockerfile.db  docker-compose.yml  init.sql
HivisionIDPhotos/: Dockerfile  deploy_api.py  docker-compose.yml
HivisionIDPhotos/demo/: processor.py
HivisionIDPhotos/hivision/creator/: face_detector.py
config/: base.yml
doc/: HivisionIDPhotos.md
src/: app_state.rs  config.rs  db.rs  lib.rs  main.rs  routes.rs
src/apis/: mod.rs  user.rs
src/apis/image/: idphoto.rs  mod.rs  upload.rs
src/middleware/: auth.rs
src/utils/: errors.rs  response.rs
test/: test_api.py
